hphp/test/zend/good/ext/standard/tests/file/filetype_variation.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no link()/symlink() on Windows');
}
if (!function_exists("posix_mkfifo")) {
    die("skip no posix_mkfifo()");
}
?>