hphp/test/zend/bad/ext/standard/tests/file/rename_variation7-win32.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') die('skip.. for Windows');
if (!function_exists("symlink")) die("skip symlinks are not supported");
?>